delete all the shit closes #67
